add install files

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ server {
     }
 
     # Pass the PHP scripts to FastCGI server
-    location ~ ^/(index|install).php {
+    location ~ ^/(index|adminer|install).php {
         # Write your FPM configuration here
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
@@ -48,6 +48,7 @@ server {
     }
 
     # Allowlist
+    location ~ ^/install_files { try_files $uri /index.php; }
     location ~ ^/favicon\.ico { try_files $uri /index.php; }
     location ~ ^/sitemap\.xml { try_files $uri /index.php; }
     location ~ ^/robots\.txt { try_files $uri /index.php; }
